--- a/03-counter-app-vite/package.json
+++ b/03-counter-app-vite/package.json
@@ -11,12 +11,12 @@
     "test": "jest --watchAll"
   },
   "dependencies": {
-    "porp-types": "^0.0.1-security",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.22.10",
     "@babel/preset-env": "^7.22.10",
     "@types/jest": "^29.5.3",
     "@types/react": "^18.2.15",
