--- a/03-counter-app-vite/package.json
+++ b/03-counter-app-vite/package.json
@@ -27,7 +27,10 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "isomorphic-fetch": "^3.0.0",
     "jest": "^29.6.2",
+    "node-fetch": "^3.3.2",
+    "react-test-renderer": "^18.2.0",
     "vite": "^4.4.5"
   }
 }
