--- a/03-counter-app-vite/package.json
+++ b/03-counter-app-vite/package.json
@@ -18,6 +18,8 @@
   "devDependencies": {
     "@babel/core": "^7.22.10",
     "@babel/preset-env": "^7.22.10",
+    "@babel/preset-react": "^7.22.5",
+    "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.3",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
@@ -29,6 +31,7 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "isomorphic-fetch": "^3.0.0",
     "jest": "^29.6.2",
+    "jest-environment-jsdom": "^29.6.2",
     "node-fetch": "^3.3.2",
     "react-test-renderer": "^18.2.0",
     "vite": "^4.4.5"
